--- a/app/views/client/shared/_navbar.html.erb
+++ b/app/views/client/shared/_navbar.html.erb
@@ -6,22 +6,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Title</a>
+      <a class="brand" href="#">Company Companion</a>
       <div class="nav-collapse collapse navbar-responsive-collapse">
-        <ul class="nav pull-right">
-          <li><a href="#">Link</a></li>
-          <li class="divider-vertical"></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+        <% if client_user_signed_in? %>
+          <ul class="nav pull-right">
+            <li class="divider-vertical"></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_client_user.name %> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Edit Password</a></li>
+                <li><a href="#">Edit Profile</a></li>
+                <li class="divider"></li>
+                <li><a href="<%= destroy_client_user_session_path %>" data-method="delete">Sign out</a></li>
+              </ul>
+            </li>
+          </ul>
+        <% end %>
       </div><!-- /.nav-collapse -->
     </div>
   </div><!-- /navbar-inner -->
