--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -3,13 +3,30 @@
 <head>
   <title>CompanyCompanion</title>
   <%= stylesheet_link_tag    "client_main", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "client_main", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render "client/shared/navbar" %>
 
-  <%= yield %>
+  <div class="container">
+    <div class="row">
+      <div class="span3">
+        <ul class="nav nav-list bs-docs-sidenav">
+          <li><a href="#"><i class="icon-chevron-right"></i> Companies</a></li>
+          <li><a href="#"><i class="icon-chevron-right"></i> Posts</a></li>
+          <li><a href="#"><i class="icon-chevron-right"></i> Products</a></li>
+          <li><a href="#"><i class="icon-chevron-right"></i> Settings</a></li>
+        </ul>
+      </div>
+      <div class="span9">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
+
+  <%= render "client/shared/footer" %>
+
+  <%= javascript_include_tag "client_main", "data-turbolinks-track" => true %>
 
 </body>
 </html>
